# Pancake2

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Pancake.c  Pancake.h  PancakeConfiguration.c  PancakeConfiguration.h  PancakeDateTime.c  PancakeDateTime.h  PancakeDebug.c  PancakeDebug.h  PancakeLogger.c  PancakeLogger.h  PancakeModulesGenerator.c  PancakeNetwork.c  PancakeNetwork.h  PancakeScheduler.c  PancakeScheduler.h  PancakeWorkers.c  PancakeWorkers.h  README  README.md  autogen.sh  config.h.in  docker-compose.yml
Authentication/: PancakeAuthentication.c  PancakeAuthentication.h  PancakeModule.cmake  module.m4
AuthenticationFile/: PancakeAuthenticationFile.c  PancakeAuthenticationFile.h  PancakeModule.cmake  module.m4
ConfigurationParser/: AUTHORS  PancakeConfigurationParser.c  PancakeConfigurationParser.h  grammar.y  parsectx.h  scanctx.c  scanctx.h  scanner.h  scanner.l  strbuf.c  strbuf.h
HTTP/: PancakeHTTP.c  PancakeHTTP.h  PancakeHTTPS.c  PancakeModule.cmake  module.m4
HTTPBasicAuthentication/: PancakeHTTPBasicAuthentication.c  PancakeHTTPBasicAuthentication.h  PancakeModule.cmake  module.m4
HTTPDeflate/: PancakeHTTPDeflate.c  PancakeHTTPDeflate.h  PancakeModule.cmake  module.m4
HTTPFastCGI/: PancakeHTTPFastCGI.c  PancakeHTTPFastCGI.h  PancakeModule.cmake  module.m4
HTTPRewrite/: PancakeHTTPRewrite.c  PancakeHTTPRewrite.h  PancakeHTTPRewriteDefaultVariables.c  PancakeHTTPRewriteDefaultVariables.h  PancakeHTTPRewriteVM.c  PancakeHTTPRewriteVM.h  PancakeModule.cmake  module.m4
HTTPStatic/: PancakeHTTPStatic.c  PancakeHTTPStatic.h  PancakeModule.cmake  module.m4
LinuxPoll/: PancakeLinuxPoll.c  PancakeLinuxPoll.h  PancakeModule.cmake  module.m4
MIME/: PancakeMIME.c  PancakeMIME.h  PancakeModule.cmake  module.m4
OpenSSL/: PancakeModule.cmake  PancakeOpenSSL.c  PancakeOpenSSL.h  module.m4
Select/: PancakeModule.cmake  PancakeSelect.c  PancakeSelect.h
SharedDependencies/: Base64Decode.c  Base64Decode.h  module.m4
config/: default.cfg  example.cfg
